<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_marker_blank"
            android:title="@string/find_me"/>

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_star_blank"
            android:title="@string/rate_us"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about"/>
    </group>

    <item
        android:title="User Activity">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/turn_off"
                android:title="@string/logout"/>
        </menu>

    </item>

</menu>