<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="@dimen/_20mdp"
    tools:context=".starter.SignIn">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli_black"
        android:layout_marginTop="@dimen/_100mdp"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="@dimen/_38font_mdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5mdp"
        android:layout_marginBottom="@dimen/_10mdp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="@dimen/_14font_mdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5mdp"
        android:hint="@string/email"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="@dimen/_2mdp"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:startIconDrawable="@drawable/ic_at"
        app:startIconTint="@color/black"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorGray">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxStrokeColor="@color/colorPrimary"
        app:boxStrokeWidthFocused="@dimen/_2mdp"
        app:endIconTint="@color/black"
        app:errorTextAppearance="@style/error_appearance"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/black"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:textColorHint="@color/colorGray" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/remember_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:minHeight="@dimen/_44mdp"
        android:text="@string/remember_me"
        android:checked="true"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_14font_mdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15mdp"
        android:background="@drawable/sign_in_btn"
        android:fontFamily="@font/bungee"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10mdp"
        android:background="#00000000"
        android:fontFamily="@font/ubuntu"
        android:text="@string/forget_password"
        android:textColor="#E9C46A"
        android:textSize="@dimen/_12font_mdp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/_48mdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20mdp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="@dimen/_16font_mdp"
            android:fontFamily="@font/ubuntu"/>

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5mdp"
            android:text="@string/sign_up"
            android:textColor="#264653"
            android:textSize="@dimen/_16font_mdp"
            android:fontFamily="@font/ubuntu"/>

    </LinearLayout>

</LinearLayout>

