<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".starter.RecoverPassword">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20mdp"
        app:cardCornerRadius="@dimen/_5mdp"
        app:cardElevation="@dimen/_10mdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/_20mdp"
            android:background="@drawable/custom_edit_text">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recover_password"
                android:textSize="@dimen/_28font_mdp"
                android:textAlignment="center"
                android:fontFamily="@font/chewy"
                android:textColor="@color/colorGray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/use_registered_email_which_you_provide_while_n_signing_up"
                android:textSize="@dimen/_10mdp"
                android:textAlignment="center"
                android:textColor="@color/colorGray"
                android:layout_marginTop="@dimen/_5mdp"
                android:fontFamily="@font/ubuntu" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5mdp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="@dimen/_2mdp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:startIconDrawable="@drawable/ic_at"
                app:startIconTint="@color/black"
                app:errorTextAppearance="@style/error_appearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorGray">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recover_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15mdp"
                android:background="@drawable/sign_in_btn"
                android:fontFamily="@font/bungee"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="@dimen/_14font_mdp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>